tests/machine/x/ocaml/json_builtin.error
stage: compile
error:
File "/workspace/mochi/tests/machine/x/ocaml/json_builtin.ml", line 6, characters 2-6:
6 |   json m;
      ^^^^
Error: Unbound value json


Context (around line 6):
   4 | 
   5 | let () =
   6 |   json m;
   7 | 
